@@ -1,5 +1,9 @@
 2009-08-19  Doug Evans  <dje@sebabeach.org>
 
+	* pmacros.scm (scan-list1): Reorganize tracing so that the tracing
+	of a pmacro begins before its arguments are evaluated, improves
+	readability.
+
 	* pmacros.scm (.sll, .srl, .sra): Fix thinko.
 	* testsuite/pmacros-1.test: Ditto.  Add better tests.
 
